[build-system]
requires = ["setuptools>=68.2.2"]
build-backend = "setuptools.build_meta"


[project]
name = "cog-lib-tool-afko"
version = "0.1.0"
authors = [{name = "CoE Cognitieve Oplossingen", email = "info@belastingdienst.nl"}]
license = {text = "Belastingdienst"}
description = """MCP toolserver providing access to OpenShift APIs"""
readme = "README.md"
requires-python = "~=3.11"
dependencies = ["fastmcp>=2.3.3, <3", "pydantic<3", "fastapi<1", "requests<3", "beautifulsoup4<5"]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-cov"]

[tool.setuptools]
package-dir = {"" = "app/src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["app/src"]
namespaces = false

[tool.pytest.ini_options]
log_cli_level = "INFO"
addopts = "--cov --cov-report=term --cov-report=lcov:lcov.info -s"
markers = [
    "dev: used to actively develop tests without running everything (use pytest -m \"dev\" .)"
]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
omit = ["tests/*"]

[tool.black]
line-length = "88"

[tool.isort]
profile = "black"

[tool.ruff]
target-version = "py311"
lint.select = ["E", "W", "F", "I", "C", "B", "UP"] # [E]-pycodestyle errors, [w]-pycodestyle warnings, [F]pyflakes, [I]-isort, [C]-flake8-comprehensions, [B]-flake8-bugbear, [UP]-PyUpgrade
lint.ignore = ["E501", "UP031", "W605"] # line too long, handled by black, allows % formating (used for logging), allow invalid escape char
